fix scaling on smaller screens

--- a/src/styles.css
+++ b/src/styles.css
@@ -20,15 +20,6 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-img,
-picture,
-video,
-canvas,
-svg {
-  display: block;
-  max-width: 100%;
-}
-
 input,
 button,
 textarea,
